tests/cases/standard-library/ok/format/format-print.ari
fn main() -> i64 {
  println("value={} ok={} byte={}", -3, true, 65 as u8);
  print("{{literal}} {}\n", 12);
  std::println("qualified={}", 2);
  println("text={} quoted={:?}", "ari", "ari");
  var zone = zone::create(64);
  let owned = std::string::from(ref mut zone, "owned");
  let owned_debug = std::string::from(ref mut zone, "debug-owned");
  println("owned={}", owned);
  println("owned-debug={:?}", owned_debug);
  println("debug={:?}", false);
  zone::destroy(zone);
  return 0;
}
