tests/cases/standard-library/errors/string/std-string-append-value-different-zone.ari
struct Label {
  value: i64,
}

impl fmt::Display for Label {
  fn format_in(self: ref Self, zone: ref mut Zone) -> std::string::String {
    var output = std::string::new(zone, 8);
    output.append_string_in(zone, "label=");
    output.append_i64_in(zone, self.value);
    return output;
  }
}

fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var text = std::string::new(ref mut source, 0);
  let label = Label { value: 7 };
  text.append_value_in(ref mut target, label);
  zone::destroy(target);
  zone::destroy(source);
  return text.len();
}
